--- a/4-styles.css
+++ b/4-styles.css
@@ -50,6 +50,10 @@
     text-align: center;
 }
 
+.logo {
+    height: 32px;
+}
+
 h2 {
     font-size: 32px;
     line-height: 37.5px;
@@ -103,11 +107,21 @@ p {
     align-items: center;
 }
 
-section ul {
+ul {
     list-style: none;
-
     display: flex;
+}
+
+section ul {
     justify-content: space-between;
+}
+
+a {
+    color: var(--bright-color);
+    text-decoration: none;
+}
+a:hover {
+    color: var(--red-color);
 }
 
 .row {
@@ -147,10 +161,6 @@ body > header {
     }
 }
 
-body > header img {
-    height: 32px;
-}
-
 #header-nav-toggle {
     display: none;
 }
@@ -159,22 +169,10 @@ body > header nav {
     width: 255px;
 }
 
-body > header ul {
-    display: flex;
-    list-style: none;
-}
-
 body > header a {
     font-weight: bold;
     font-size: 12px;
     line-height: 15.08px;
-
-    color: var(--bright-color);
-    text-decoration: none;
-}
-
-body > header a:hover {
-    color: var(--red-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -476,8 +474,6 @@ h1 {
     margin-top: 20px;
 }
 
-
-
 /* EXERCISE 3 */
 
 #contact-us-section {
@@ -535,36 +531,42 @@ input::placeholder {
 footer {
     color: var(--bright-color);
     background-color: var(--dark-color);
-
-    padding-top: 92px;
-    padding-bottom: 39px;
-
-    text-align: center;
-}
-
-footer .container {
-    max-width: 1000px;
-    margin: auto;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 71px;
 }
 
 #footer-content {
     width: 100%;
-
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+}
+
+@media screen and (min-width: 481px) {
+    footer .section-container {
+        gap: 71.24px;
+        padding-top: 91.76px;
+        padding-bottom: 39px;
+    }
+    #footer-content {
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    footer .section-container {
+        gap: 45px;
+        padding-top: 48px;
+        padding-bottom: 34px;
+    }
+    #footer-content {
+        flex-direction: column;
+        gap: 45px;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
 }
 
 footer nav {
     width: 130px;
 }
 footer ul {
-    display: flex;
     justify-content: space-between;
 }
 
